fixes to the multimedia text alignment.

--- a/sass/custom/_front.scss
+++ b/sass/custom/_front.scss
@@ -1,5 +1,4 @@
 .front .aurora-section-first {
-  background: #000;
   text-align: center;
   margin-bottom: 20px;
 
@@ -42,6 +41,10 @@
         padding: 10px;
         vertical-align: top;
         width: 102px;
+      }
+
+      .views-field-title {
+        padding: 5px 10px 0 0;
       }
 
       .views-field-nothing {
